--- a/angular/src/app/categories/categories.component.html
+++ b/angular/src/app/categories/categories.component.html
@@ -1,1 +1,116 @@
-<p>categories works!</p>
+<div class="card">
+    <div class="card-header">
+        <div class="row">
+            <div class="col col-md-6">
+                <h5 class="card-title">Kategoriler</h5>
+            </div>
+            <div class="text-end col col-md-6">
+                <div class="text-lg-end pt-2">
+                    <button class="btn btn-primary" (click)="createCategory()">
+                        <i class="fa fa-plus me-1"></i>
+                        <span>Yeni Kategori</span>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="card-body">
+        <ngx-datatable [rows]="category.items" [count]="category.totalCount" [list]="list" default>
+            <ngx-datatable-column name="name" [sortable]="false">
+                <ng-template let-row="row" ngx-datatable-cell-template>
+                    {{ row.name }}
+                </ng-template>
+            </ngx-datatable-column>
+
+            <ngx-datatable-column name="parentCategory" [sortable]="false">
+                <ng-template let-row="row" ngx-datatable-cell-template>
+                    {{ row.parentCategory?.name }}
+                </ng-template>
+            </ngx-datatable-column>
+
+            <ngx-datatable-column name="description" [sortable]="false">
+                <ng-template let-row="row" ngx-datatable-cell-template>
+                    {{ row.description }}
+                </ng-template>
+            </ngx-datatable-column>
+
+            <ngx-datatable-column name="actions" [sortable]="false">
+                <ng-template let-row="row" ngx-datatable-cell-template>
+                    <div class="btn-group" role="group">
+                        <button class="btn btn-primary btn-sm" (click)="editCategory(row.id)">
+                            <i class="fa fa-pencil"></i>
+                        </button>
+                        <button class="btn btn-danger btn-sm" (click)="delete(row.id)">
+                            <i class="fa fa-trash"></i>
+                        </button>
+                    </div>
+                </ng-template>
+            </ngx-datatable-column>
+        </ngx-datatable>
+    </div>
+</div>
+
+<abp-modal [(visible)]="isModalOpen">
+    <ng-template #abpHeader>
+        <h3>{{ selectedCategory.id ? 'Kategori Düzenle' : 'Yeni Kategori' }}</h3>
+    </ng-template>
+
+    <ng-template #abpBody>
+        <form [formGroup]="form" (ngSubmit)="save()">
+            <div class="form-group">
+                <label for="category-name">Kategori Adı</label>
+                <input type="text" id="category-name" class="form-control" formControlName="name" />
+            </div>
+
+            <div class="form-group mt-2">
+                <label for="parent-category">Üst Kategori</label>
+                <select class="form-control" id="parent-category" formControlName="parentCategoryId">
+                    <option [ngValue]="null">Seçiniz</option>
+                    <option *ngFor="let category of allCategories" [value]="category.id">
+                        {{ category.name }}
+                    </option>
+                </select>
+            </div>
+
+            <div class="form-group mt-2">
+                <label for="category-description">Açıklama</label>
+                <textarea id="category-description" class="form-control" formControlName="description"
+                    rows="3"></textarea>
+            </div>
+
+            <div class="mt-2">
+                <h4>SEO Bilgileri</h4>
+                <div class="form-group">
+                    <label for="seo-title">SEO Başlığı</label>
+                    <input type="text" id="seo-title" class="form-control" formControlName="seoTitle" />
+                </div>
+
+                <div class="form-group mt-2">
+                    <label for="seo-description">SEO Açıklaması</label>
+                    <textarea id="seo-description" class="form-control" formControlName="seoDescription"
+                        rows="2"></textarea>
+                </div>
+
+                <div class="form-group mt-2">
+                    <label for="seo-keywords">SEO Anahtar Kelimeleri</label>
+                    <input type="text" id="seo-keywords" class="form-control" formControlName="seoKeywords" />
+                </div>
+
+                <div class="form-group mt-2">
+                    <label for="seo-slug">SEO URL</label>
+                    <input type="text" id="seo-slug" class="form-control" formControlName="seoSlug" />
+                </div>
+            </div>
+        </form>
+    </ng-template>
+
+    <ng-template #abpFooter>
+        <button type="button" class="btn btn-secondary" abpClose>
+            Vazgeç
+        </button>
+        <button class="btn btn-primary" (click)="save()" [disabled]="form.invalid">
+            <i class="fa fa-check me-1"></i>
+            {{ selectedCategory.id ? 'Güncelle' : 'Kaydet' }}
+        </button>
+    </ng-template>
+</abp-modal>
