Category Lang Init

--- a/angular/src/app/categories/categories.component.html
+++ b/angular/src/app/categories/categories.component.html
@@ -48,6 +48,10 @@
                             <button (click)="delete(category.id)" class="btn btn-danger btn-sm" title="Sil">
                                 <i class="fa fa-trash"></i>
                             </button>
+
+                            <a [routerLink]="['/category-item-language', category.id]" class="btn btn-info">
+                                Dil Ayarları
+                            </a>
                         </div>
                     </td>
                 </tr>
