--- a/angular/src/app/category-item-language/category-item-language.component.html
+++ b/angular/src/app/category-item-language/category-item-language.component.html
@@ -1,17 +1,127 @@
 <div class="card">
     <div class="card-header">
-        <h5 class="card-title">Kategori Dil Ayarları</h5>
+        <div class="row">
+            <div class="col-md-6">
+                <h5 class="card-title">Kategori Dil Ayarları</h5>
+            </div>
+            <div class="col-md-6 text-end">
+                <button *ngIf="getUntranslatedLanguages().length > 0" class="btn btn-primary"
+                    (click)="createTranslation()">
+                    Yeni Çeviri Ekle
+                </button>
+            </div>
+        </div>
     </div>
+
     <div class="card-body">
         <div *ngIf="category">
-            <h6>Kategori ID: {{ categoryId }}</h6>
-            <div class="mt-3">
-                <h6>Mevcut Çeviriler:</h6>
-                <div *ngFor="let translation of category.translations" class="mt-2">
-                    <strong>{{ translation.languageCode }}:</strong> {{ translation.name }}
-                    <p *ngIf="translation.description">{{ translation.description }}</p>
-                </div>
+            <div class="mb-3">
+                <strong>Kategori ID:</strong> {{ categoryId }}
+            </div>
+
+            <div class="table-responsive">
+                <table class="table table-striped">
+                    <thead>
+                        <tr>
+                            <th>Dil</th>
+                            <th>Kategori Adı</th>
+                            <th>Açıklama</th>
+                            <th>SEO Başlık</th>
+                            <th>SEO Açıklama</th>
+                            <th>SEO Anahtar Kelimeler</th>
+                            <th>İşlemler</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let translation of category.translations">
+                            <td>{{ getLanguageName(translation.languageCode) }}</td>
+                            <td>{{ translation.name }}</td>
+                            <td>{{ translation.description }}</td>
+                            <td>{{ translation.seoTitle }}</td>
+                            <td>{{ translation.seoDescription }}</td>
+                            <td>{{ translation.seoKeywords }}</td>
+                            <td>
+                                <div class="btn-group" role="group">
+                                    <button class="btn btn-primary btn-sm" (click)="editTranslation(translation)">
+                                        Düzenle
+                                    </button>
+                                    <button class="btn btn-danger btn-sm" (click)="deleteTranslation(translation)"
+                                        [disabled]="category.translations.length <= 1">
+                                        Sil
+                                    </button>
+                                </div>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
 </div>
+
+<abp-modal [(visible)]="isModalOpen">
+    <ng-template #abpHeader>
+        <h3>{{ selectedLanguage ? 'Çeviri Düzenle' : 'Yeni Çeviri Ekle' }}</h3>
+    </ng-template>
+
+    <ng-template #abpBody>
+        <form [formGroup]="form" (ngSubmit)="save()">
+            <div class="form-group">
+                <label for="languageCode">Dil</label>
+                <select id="languageCode" class="form-control" formControlName="languageCode">
+                    <option value="">Dil Seçiniz</option>
+                    <ng-container *ngIf="!selectedLanguage">
+                        <option *ngFor="let lang of getUntranslatedLanguages()" [value]="lang.code">
+                            {{ lang.name }}
+                        </option>
+                    </ng-container>
+                    <ng-container *ngIf="selectedLanguage">
+                        <option [value]="selectedLanguage.languageCode">
+                            {{ getLanguageName(selectedLanguage.languageCode) }}
+                        </option>
+                    </ng-container>
+                </select>
+            </div>
+
+            <div class="form-group mt-2">
+                <label for="name">Kategori Adı</label>
+                <input type="text" id="name" class="form-control" formControlName="name" />
+            </div>
+
+            <div class="form-group mt-2">
+                <label for="description">Açıklama</label>
+                <textarea id="description" class="form-control" formControlName="description" rows="3">
+          </textarea>
+            </div>
+
+            <div class="mt-3">
+                <h5>SEO Bilgileri</h5>
+
+                <div class="form-group mt-2">
+                    <label for="seoTitle">SEO Başlığı</label>
+                    <input type="text" id="seoTitle" class="form-control" formControlName="seoTitle" />
+                </div>
+
+                <div class="form-group mt-2">
+                    <label for="seoDescription">SEO Açıklaması</label>
+                    <textarea id="seoDescription" class="form-control" formControlName="seoDescription" rows="2">
+            </textarea>
+                </div>
+
+                <div class="form-group mt-2">
+                    <label for="seoKeywords">SEO Anahtar Kelimeleri</label>
+                    <input type="text" id="seoKeywords" class="form-control" formControlName="seoKeywords" />
+                </div>
+            </div>
+        </form>
+    </ng-template>
+
+    <ng-template #abpFooter>
+        <button type="button" class="btn btn-secondary" abpClose>
+            Vazgeç
+        </button>
+        <button class="btn btn-primary" (click)="save()" [disabled]="form.invalid">
+            {{ selectedLanguage ? 'Güncelle' : 'Kaydet' }}
+        </button>
+    </ng-template>
+</abp-modal>
